# astron-backend

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
users/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_balance.py  0003_alter_announcement_content.py  0004_advertisement_channel_alter_transaction_state.py  0005_alter_user_first_name_alter_user_last_name.py  0006_remove_user_telegram_username_alter_user_id.py  0007_remove_advertisement_link.py  0008_advertisement_receivers_advertisement_status.py  0009_alter_advertisement_content_and_more.py  0010_count.py  0011_alter_count_created.py  0012_coursechannel.py
